--- a/src/app/(beforeLogin)/_component/Signup.module.css
+++ b/src/app/(beforeLogin)/_component/Signup.module.css
@@ -86,11 +86,9 @@
 .actionButton:disabled {
   opacity: 0.5;
 }
-
 .actionButton:disabled:hover {
   background-color: rgb(15, 20, 25);
 }
-
 .actionButton:hover {
   background-color: rgb(39, 44, 48);
 }
@@ -111,4 +109,9 @@
 }
 .closeButton:hover {
   background-color: rgba(15, 20, 25, 0.1);
+}
+
+.error {
+  font-weight: bold;
+  color: red;
 }
